applyToMethod has been split to allow filtering without having a ILogEntry (it happens to the table for example)
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@91031 523d945c-050c-4681-91ec-863ad3bb968a